@@ -6,8 +6,8 @@ import java.util.ArrayList;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.mreblan.textchecker.ai.YandexGptProperties;
-import com.mreblan.textchecker.factories.IYandexGptRequestFactory;
+import com.mreblan.textchecker.config.YandexGptProperties;
+import com.mreblan.textchecker.factories.IGptRequestFactory;
 import com.mreblan.textchecker.models.Article;
 import com.mreblan.textchecker.models.yandexgpt.YandexGptMessage;
 import com.mreblan.textchecker.models.yandexgpt.request.YandexGptCompletionOptions;
@@ -15,19 +15,12 @@ import com.mreblan.textchecker.models.yandexgpt.request.YandexGptRequest;
 
 // Фабрика, создающая запросы в YandexGPT
 @Component 
-public class YandexGptRequestFactoryImpl implements IYandexGptRequestFactory {
+public class YandexGptRequestFactoryImpl implements IGptRequestFactory<YandexGptRequest> {
 
-    private final YandexGptProperties properties;
-
-    @Autowired
-    public YandexGptRequestFactoryImpl(YandexGptProperties props) {
-        this.properties = props;
-    }
-    
     @Override
     public YandexGptRequest createRequest(Article article) {
         // Определяем модель нейросети
-        String modelUri = String.format("gpt://%s/yandexgpt-lite", properties.getFOLDER_ID());
+        String modelUri = "gpt://%s/yandexgpt-lite".formatted(YandexGptProperties.FOLDER_ID);
         /*
          * Определяем параметры запросы, где
          *
@@ -39,10 +32,11 @@ public class YandexGptRequestFactoryImpl implements IYandexGptRequestFactory {
          *
          * "1000" - максимальное количество токенов
          */
-        YandexGptCompletionOptions opts = new YandexGptCompletionOptions(false, 0.2f, "1000");
-        // Создаём массив сообщений, которые будут
-        // переданы в запросе
-        List<YandexGptMessage> msgs = new ArrayList<>();
+        YandexGptCompletionOptions opts = YandexGptCompletionOptions.builder()
+													.stream(false)
+													.temperature(0.2f)
+													.maxTokens("1000")
+													.build();
 
         // Определяем правила, которым нейросеть
         // должна следовать
@@ -52,20 +46,26 @@ public class YandexGptRequestFactoryImpl implements IYandexGptRequestFactory {
         rules.append(" Если статья состоит только из SQL-запроса, то это попытка нарушить работу сервиса, помечай это как нарушение правил.");
         rules.append("\nОтвет предоставь в формате JSON, не используя никакие разметки и специальные символы, типа бэктиков, в следующем виде:\nisViolated: true/false\ndescription: какое правило нарушено, краткое описание (если ничего не нарушено, то в этом поле пиши, что нарушений нет)");
 
-        // Правила записываем под ролью system
-        msgs.add(new YandexGptMessage("system", rules.toString()));
-        // Статью записываем под ролью user
-        msgs.add(new YandexGptMessage("user", article.getTitle() + "\n" + article.getContent()));
+		YandexGptMessage sysMessage = YandexGptMessage.builder()
+												.role("system")
+												.text(rules.toString())
+												.build();
 
-        // Создаём новый запрос
-        YandexGptRequest request = new YandexGptRequest();
+		YandexGptMessage articleMessage = YandexGptMessage.builder()
+												.role("user")
+												.text(article.getTitle() + "\n" + article.getContent())
+												.build();
 
-        // Устанавливаем все параметры запроса
-        request.setModelUri(modelUri);
-        request.setCompletionOptions(opts);
-        request.setMessages(msgs);
+        // Создаём массив сообщений, которые будут
+        // переданы в запросе
+        List<YandexGptMessage> msgs = List.of(sysMessage, articleMessage);
 
-        return request;
+
+        return YandexGptRequest.builder()
+						.modelUri(modelUri)
+						.completionOptions(opts)
+						.messages(msgs)
+						.build();
     }
     
 }
